--- a/service.html
+++ b/service.html
@@ -116,59 +116,129 @@
 
 
         <!-- Services Start -->
-        <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay="0.2s">
-            <div class="container py-5 border-start-0 border-end-0" style="border: 1px solid; border-color: rgb(255, 255, 255, 0.08);">
-                <div class="row g-5">
-                    <div class="col-md-6 col-lg-6 col-xl-4">
-                        <div class="footer-item">
-                            <a href="index.html" class="p-0">
-                                <h4 class="text-white"><i class="fas fa-wave me-3"></i>NextWave Technologies</h4>
-                                <!-- <img src="img/logo.png" alt="Logo"> -->
-                            </a>
-                            <p class="mb-4">The Next Wave of IT</p>
-                            <div class="d-flex">
+        <div class="container-fluid service pb-5">
+            <div class="container pb-5">
+                <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
+                    <h4 class="text-primary">Our Services</h4>
+                    <h1 class="display-5 mb-4">We Services provided best offer</h1>
+                    <p class="mb-0">
+                        We offer a wide range of IT services, including network setup, cybersecurity, cloud solutions, 
+                        data management, and tech support for both residential and commercial clients. Our team is dedicated 
+                        to providing customized, reliable, and affordable solutions that meet your unique needs and keep 
+                        your technology running smoothly.
+                    </p>
+                </div>
+                <div class="row g-4">
+                    <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.2s">
+                        <div class="service-item">
+                            <div class="service-img">
+                                <img src="img/s1.jpeg" class="img-fluid rounded-top w-100" alt="Image">
+                            </div>
+                            <div class="rounded-bottom p-4">
+                                <a href="#" class="h4 d-inline-block mb-4"> Managed Services</a>
+                                <p class="mb-4">
+                                    Our Managed IT Services provide proactive, reliable support to keep your business running smoothly. 
+                                    From network monitoring and cybersecurity to data backups and software updates, we handle the day-to-day 
+                                    IT operations so you can focus on what matters most—growing your business. With expert management, enhanced 
+                                    security, and 24/7 support, we ensure your technology is always performing at its best.
+                                </p>
+                                <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-6 col-xl-2">
-                        <div class="footer-item">
-                            <h4 class="text-white mb-4">Quick Links</h4>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> About Us</a>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> Contact us</a>
+                    <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.4s">
+                        <div class="service-item">
+                            <div class="service-img">
+                                <img src="img/s2.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                            </div>
+                            <div class="rounded-bottom p-4">
+                                <a href="#" class="h4 d-inline-block mb-4">Residential</a>
+                                <p class="mb-4">
+                                    We provide comprehensive IT support for your home, from setting up secure Wi-Fi 
+                                    and troubleshooting devices to installing security cameras, smart home systems, 
+                                    and mounting TVs and sound systems. Whether you're enhancing your home’s security 
+                                    or upgrading your entertainment setup, our expert team ensures everything runs 
+                                    smoothly and seamlessly. With friendly, reliable service, we make technology work 
+                                    for you—so you can enjoy a smarter, more connected home.
+                                </p>
+                                <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-6 col-xl-3">
-                        <div class="footer-item">
-                            <h4 class="text-white mb-4">Support</h4>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> Terms & Conditions</a>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> Disclaimer</a>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> FAQ</a>
+                    <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.6s">
+                        <div class="service-item">
+                            <div class="service-img">
+                                <img src="img/s3..jpg" class="img-fluid rounded-top w-100" alt="Image">
+                            </div>
+                            <div class="rounded-bottom p-4">
+                                <a href="#" class="h4 d-inline-block mb-4">Networks and Security</a>
+                                <p class="mb-4">
+                                    We specialize in designing and implementing robust network infrastructures for businesses 
+                                    of all sizes. Our network installation services ensure seamless connectivity, from routers 
+                                    and switches to Wi-Fi access points and fiber optic setups. In addition, we provide 
+                                    comprehensive security solutions, including firewall configurations, surveillance systems, 
+                                    and secure access control, to protect your business from cyber threats and physical security 
+                                    risks. With our expert support, your company can rely on fast, secure, and scalable technology 
+                                    to drive success and growth.
+                                </p>
+                                <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-6 col-xl-3">
-                        <div class="footer-item">
-                            <h4 class="text-white mb-4">Contact Info</h4>
-                            <div class="d-flex align-items-center">
-                                <i class="fas fa-map-marker-alt text-primary me-3"></i>
-                                <p class="text-white mb-0">123 Street New York.USA</p>
+                    <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.2s">
+                        <div class="service-item">
+                            <div class="service-img">
+                                <img src="img/s4.jpg" class="img-fluid rounded-top w-100" alt="Image">
                             </div>
-                            <div class="d-flex align-items-center">
-                                <i class="fas fa-envelope text-primary me-3"></i>
-                                <p class="text-white mb-0">thenextwaveit@gmail.com</p>
+                            <div class="rounded-bottom p-4">
+                                <a href="#" class="h4 d-inline-block mb-4">Phone and Tablet Repair</a>
+                                <p class="mb-4">
+                                    Get your devices back in action with our fast, reliable phone and tablet repair services. 
+                                    From cracked screens and battery replacements to water damage and hardware issues, our expert 
+                                    technicians provide quality repairs using high-grade parts. We offer affordable solutions to 
+                                    get your devices working like new—so you can stay connected without the hassle.
+                                </p>
+                                <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
                             </div>
-                            <div class="d-flex align-items-center">
-                                <i class="fa fa-phone-alt text-primary me-3"></i>
-                                <p class="text-white mb-0">(810) 882 1776</p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.4s">
+                        <div class="service-item">
+                            <div class="service-img">
+                                <img src="img/s5.webp" class="img-fluid rounded-top w-100" alt="Image">
                             </div>
-                            <div class="d-flex align-items-center mb-4">
-                                <i class="fab fa-firefox-browser text-primary me-3"></i>
-                                <p class="text-white mb-0">nextwaveit-admin.github.io</p>
+                            <div class="rounded-bottom p-4">
+                                <a href="#" class="h4 d-inline-block mb-4">Computer Building and Repair</a>
+                                <p class="mb-4">
+                                    Whether you need a high-performance custom PC built to your exact specifications or 
+                                    professional repair services for desktops and laptops, we've got you covered. Our expert 
+                                    technicians specialize in designing and assembling powerful, tailor-made computers that 
+                                    meet your unique needs—whether for gaming, business, or everyday use. We also provide fast, 
+                                    reliable repairs for desktops and laptops, from screen replacements and hardware upgrades 
+                                    to troubleshooting and software fixes. With top-quality components and skilled service, we 
+                                    ensure your devices perform at their best.
+                                </p>
+                                <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
                             </div>
-                            <div class="d-flex">
-                                <a class="btn btn-primary btn-sm-square rounded-circle me-3" href="#"><i class="fab fa-facebook-f text-white"></i></a>
-                                <a class="btn btn-primary btn-sm-square rounded-circle me-3" href="#"><i class="fab fa-twitter text-white"></i></a>
-                                <a class="btn btn-primary btn-sm-square rounded-circle me-3" href="#"><i class="fab fa-instagram text-white"></i></a>
-                                <a class="btn btn-primary btn-sm-square rounded-circle me-0" href="#"><i class="fab fa-linkedin-in text-white"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.6s">
+                        <div class="service-item">
+                            <div class="service-img">
+                                <img src="img/s6.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                            </div>
+                            <div class="rounded-bottom p-4">
+                                <a href="#" class="h4 d-inline-block mb-4">IT Consulting</a>
+                                <p class="mb-4">
+                                    Unlock the full potential of your business with our expert IT consulting services. 
+                                    We work closely with your team to assess your technology needs, optimize your 
+                                    infrastructure, and develop tailored strategies that drive efficiency, innovation, 
+                                    and growth. From streamlining operations and enhancing cybersecurity to selecting the 
+                                    right software and hardware solutions, we provide actionable insights and solutions 
+                                    to keep your business ahead of the curve. With our guidance, you’ll make smarter 
+                                    technology decisions that support your long-term goals.
+                                </p>
+                                <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
                             </div>
                         </div>
                     </div>
@@ -311,25 +381,11 @@
                     <div class="col-md-6 col-lg-6 col-xl-4">
                         <div class="footer-item">
                             <a href="index.html" class="p-0">
-                                <h4 class="text-white"><i class="fas fa-search-dollar me-3"></i>Stocker</h4>
+                                <h4 class="text-white"><i class="fas fa-wave me-3"></i>NextWave Technologies</h4>
                                 <!-- <img src="img/logo.png" alt="Logo"> -->
                             </a>
-                            <p class="mb-4">Dolor amet sit justo amet elitr clita ipsum elitr est.Lorem ipsum dolor sit amet, consectetur adipiscing...</p>
+                            <p class="mb-4">The Next Wave of IT</p>
                             <div class="d-flex">
-                                <a href="#" class="bg-primary d-flex rounded align-items-center py-2 px-3 me-2">
-                                    <i class="fas fa-apple-alt text-white"></i>
-                                    <div class="ms-3">
-                                        <small class="text-white">Download on the</small>
-                                        <h6 class="text-white">App Store</h6>
-                                    </div>
-                                </a>
-                                <a href="#" class="bg-dark d-flex rounded align-items-center py-2 px-3 ms-2">
-                                    <i class="fas fa-play text-primary"></i>
-                                    <div class="ms-3">
-                                        <small class="text-white">Get it on</small>
-                                        <h6 class="text-white">Google Play</h6>
-                                    </div>
-                                </a>
                             </div>
                         </div>
                     </div>
@@ -337,22 +393,15 @@
                         <div class="footer-item">
                             <h4 class="text-white mb-4">Quick Links</h4>
                             <a href="#"><i class="fas fa-angle-right me-2"></i> About Us</a>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> Feature</a>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> Attractions</a>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> Tickets</a>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> Blog</a>
                             <a href="#"><i class="fas fa-angle-right me-2"></i> Contact us</a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item">
                             <h4 class="text-white mb-4">Support</h4>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> Privacy Policy</a>
                             <a href="#"><i class="fas fa-angle-right me-2"></i> Terms & Conditions</a>
                             <a href="#"><i class="fas fa-angle-right me-2"></i> Disclaimer</a>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> Support</a>
                             <a href="#"><i class="fas fa-angle-right me-2"></i> FAQ</a>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> Help</a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
@@ -364,15 +413,15 @@
                             </div>
                             <div class="d-flex align-items-center">
                                 <i class="fas fa-envelope text-primary me-3"></i>
-                                <p class="text-white mb-0">info@example.com</p>
+                                <p class="text-white mb-0">thenextwaveit@gmail.com</p>
                             </div>
                             <div class="d-flex align-items-center">
                                 <i class="fa fa-phone-alt text-primary me-3"></i>
-                                <p class="text-white mb-0">(+012) 3456 7890</p>
+                                <p class="text-white mb-0">(810) 882 1776</p>
                             </div>
                             <div class="d-flex align-items-center mb-4">
                                 <i class="fab fa-firefox-browser text-primary me-3"></i>
-                                <p class="text-white mb-0">Yoursite@ex.com</p>
+                                <p class="text-white mb-0">nextwaveit-admin.github.io</p>
                             </div>
                             <div class="d-flex">
                                 <a class="btn btn-primary btn-sm-square rounded-circle me-3" href="#"><i class="fab fa-facebook-f text-white"></i></a>
