--- a/service.html
+++ b/service.html
@@ -247,7 +247,112 @@
         </div>
         <!-- Services End -->
 
-        <!-- Testimonial Start -->
+        <!-- Offer Start -->
+        <div class="container-fluid offer-section pb-5">
+            <div class="container pb-5">
+                <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
+                    <h4 class="text-primary">Managed Services</h4>
+                    <h1 class="display-5 mb-4">Plans We offer</h1>
+                    <p class="mb-0">
+                        We offer comprehensive managed services that include remote monitoring and antivirus protection to 
+                        keep your systems secure. Our larger plans also feature advanced email filtering and phishing training 
+                        to help safeguard against cyber threats and ensure your team is well-prepared.
+                    </p>
+                </div>
+                <div class="row g-5 align-items-center">
+                    <div class="col-xl-5 wow fadeInLeft" data-wow-delay="0.2s">
+                        <div class="nav nav-pills bg-light rounded p-5">
+                            <a class="accordion-link p-4 active mb-4" data-bs-toggle="pill" href="#collapseOne">
+                                <h5 class="mb-0">Basic Monitoring and Protection Plan</h5>
+                            </a>
+                            <a class="accordion-link p-4 mb-4" data-bs-toggle="pill" href="#collapseTwo">
+                                <h5 class="mb-0">Plus Monitoring and Protection Plan</h5>
+                            </a>
+                            <a class="accordion-link p-4 mb-4" data-bs-toggle="pill" href="#collapseThree">
+                                <h5 class="mb-0">Proffesional Monitoring and Protection Plan</h5>
+                            </a>
+                            <a class="accordion-link p-4 mb-0" data-bs-toggle="pill" href="#collapseFour">
+                                <h5 class="mb-0">Complete Monitoring and Protection Plan</h5>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-xl-7 wow fadeInRight" data-wow-delay="0.4s">
+                        <div class="tab-content">
+                            <div id="collapseOne" class="tab-pane fade show p-0 active">
+                                <div class="row g-4">
+                                    <div class="col-md-7">
+                                        <img src="img/o11.jpg" class="img-fluid w-100 rounded" alt="">
+                                    </div>
+                                    <div class="col-md-5">
+                                        <h1 class="display-5 mb-4">Basic Monitoring and Protection Plan</h1>
+                                        <p class="mb-4">
+                                            For just $9.99 per workstation, you’ll receive remote monitoring, antivirus protection, 
+                                            and access to our 24/7 email support line to submit tickets for any issues.
+                                        </p>
+                                        <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div id="collapseTwo" class="tab-pane fade show p-0">
+                                <div class="row g-4">
+                                    <div class="col-md-7">
+                                        <img src="img/o22.jpg" class="img-fluid w-100 rounded" alt="">
+                                    </div>
+                                    <div class="col-md-5">
+                                        <h1 class="display-5 mb-4">Plus Monitoring and Protection Plan</h1>
+                                        <p class="mb-4">
+                                            For $11.99 per workstation, you’ll get remote monitoring, antivirus protection, access to our 
+                                            24/7 email support line, plus free user additions and removals in your environment. This plan 
+                                            also includes either spam email filtering or phishing training to enhance your security.
+                                        </p>
+                                        <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div id="collapseThree" class="tab-pane fade show p-0">
+                                <div class="row g-4">
+                                    <div class="col-md-7">
+                                        <img src="img/o43.jpg" class="img-fluid w-100 rounded" alt="">
+                                    </div>
+                                    <div class="col-md-5">
+                                        <h1 class="display-5 mb-4">Proffesional Monitoring and Protection Plan</h1>
+                                        <p class="mb-4">
+                                            For $14.99 per workstation, you’ll receive remote monitoring, antivirus protection, access to our 
+                                            24/7 email support line, free user additions and removals, and both spam email filtering and phishing 
+                                            training. This plan also includes quarterly security audits, with an on-site visit four times a year 
+                                            to ensure your systems are fully optimized and secure.
+                                        </p>
+                                        <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div id="collapseFour" class="tab-pane fade show p-0">
+                                <div class="row g-4">
+                                    <div class="col-md-7">
+                                        <img src="img/o54.jpg" class="img-fluid w-100 rounded" alt="">
+                                    </div>
+                                    <div class="col-md-5">
+                                        <h1 class="display-5 mb-4">Complete Monitoring and Protection Plan</h1>
+                                        <p class="mb-4">
+                                            For $19.99 per workstation, you’ll get everything from our $14.99 plan—remote monitoring, 
+                                            antivirus protection, 24/7 email support, free user additions and removals, spam email filtering, 
+                                            and phishing training—plus monthly on-site visits to proactively manage and optimize your IT. 
+                                            This plan also includes quarterly security audits to ensure your systems remain secure and fully 
+                                            compliant. Additionally, all remote support is completely free, giving you peace of mind knowing 
+                                            help is just a call or click away.
+                                        </p>
+                                        <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Offer End -->
+
+        <!-- Testimonial Start 
         <div class="container-fluid testimonial pb-5">
             <div class="container pb-5">
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
@@ -372,7 +477,7 @@
                 </div>
             </div>
         </div>
-        <!-- Testimonial End -->
+         Testimonial End -->
 
         <!-- Footer Start -->
         <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay="0.2s">
